<resources>
    <string name="app_name">My calcuiator</string>
    <string name="key_7">7</string>
    <string name="key_8">8</string>
    <string name="key_9">9</string>
    <string name="key_split">/</string>
    <string name="key_4">4</string>
    <string name="key_5">5</string>
    <string name="key_6">6</string>
    <string name="key_multy">*</string>
    <string name="key_1">1</string>
    <string name="key_2">2</string>
    <string name="key_3">3</string>
    <string name="key_min">-</string>
    <string name="key_null">0</string>
    <string name="key_z">,</string>
    <string name="key_plus">+</string>
    <string name="key_res">=</string>

</resources>